0x07-python-test_driven_development/tests/5-text_indentation.txt
>>> text_indentation = __import__('5-text_indentation').text_indentation
>>> text_indentation("some, text? are simply. just better that others: what do I mean? I don't. know either:")
some, text?

 are simply.

 just better that others:

 what do I mean?

 I don't.

 know either:

>>> text_indentation("some, text are simply just better that others what do I mean I don't know either")
some, text are simply just better that others what do I mean I don't know either>>> text_indentation("some, text are simply just better that others what do I mean I don't some, text? are si)
  File "<stdin>", line 1
    text_indentation("some, text? are si)
                                        ^
SyntaxError: EOL while scanning string literal
>>> text_indentation(34)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/alx-higher_level_programming/0x07-python-test_driven_development/5-text_indentation.py", line 13, in text_indentation
    raise TypeError("text must be a string")
TypeError: text must be a string
>>> text_indentation([3,4])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/alx-higher_level_programming/0x07-python-test_driven_development/5-text_indentation.py", line 13, in text_indentation
    raise TypeError("text must be a string")
TypeError: text must be a string
>>> text_indentation(True)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/alx-higher_level_programming/0x07-python-test_driven_development/5-text_indentation.py", line 13, in text_indentation
    raise TypeError("text must be a string")
TypeError: text must be a string
>>> text_indentation("""Merry. Christmas? and. Happy: New? Year:""")
Merry.

 Christmas?

 and.

 Happy:

 New?

 Year:

